Added delete and put routes.  Updated api-docs
